k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leadiq-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: leadiq.local
      http:
        paths:
          - path: /api-gateway/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
